Updates to bulleted points associated with EPA work.

--- a/swall_resume.tex
+++ b/swall_resume.tex
@@ -133,15 +133,21 @@ Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 \setlength{\labelwidth}{1em}
 \setlength{\leftmargin}{1em}
 }
-\item Developed and applied statistical methods to evaluate the performance of air quality models, including kriging techniques and advanced Bayesian spatial models
-\item Implemented Bayesian dynamic linear modeling strategies to assess long-term trends in air quality and climate
-\item Identified statistical techniques to address measurement uncertainty and collinearity in estimation of organic mass to organic carbon ratios
-\item Applied clustering and classification algorithms to identify long-term wind patterns over the continental U.S.
-\item Evaluated predictive performance of statistical climate
-  downscaling models
-\item Advised other scientists on statistical inference techniques,
-  interpretation of the results of statistical procedures, selection
-  of statistical software packages, efficient R programming strategies, etc.
+\item Developed statistical methods to evaluate the performance of
+air quality models, including kriging techniques and advanced Bayesian
+spatial models
+\item Implemented Bayesian dynamic linear modeling strategies to assess
+long-term trends in air quality and climate
+%\item Identified statistical techniques to address measurement uncertainty
+% and collinearity in estimation of organic mass to organic carbon ratios
+\item Applied clustering and classification algorithms to identify long-term
+wind patterns over the continental U.S.
+%\item Evaluated predictive performance of statistical climate
+%  downscaling models
+\item Advised other scientists on implementation of statistical methodologies
+and interpretation of the results of statistical procedures
+\item Administered and maintained statistical software on Linux machines
+used by approximately 40 staff members
 \end{list}
 
 
